<resources>
    <string name="app_name">Timer</string>
    <string name="welcome">Welcome to Timer</string>
    <string name="theme">Night/Day theme</string>
    <string name="size">Big Font Size</string>
    <string name="create">Timer</string>
    <string name="changeLang">Change Language</string>
    <string name="preparation">Preparation</string>
    <string name="work">Work</string>
    <string name="name">Name</string>
    <string name="rest">Rest</string>
    <string name="cycles">Cycles</string>
    <string name="calm">Calm Down</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="settings">Settings</string>
    <string name="training">Training</string>
    <string name="add_string">+</string>
    <string name="Minus">-</string>
    <string name="set">Set</string>
    <string name="Yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="start">Start</string>
    <string name="Update">Update</string>
    <string name="No">No</string>
    <string name="TimerName">Timer Name</string>
    <string name="SaveMess">Сохранить?</string>
    <string name="addTimer">Add Timer</string>
    <string name="menu">Timer menu</string>
</resources>