<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/color_layout"
    tools:context=".UpdateActivity"
    android:padding="30sp">

    <EditText
        android:id="@+id/name_input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/TimerName"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/preparation_input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/preparation_input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/preparation"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/work_input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_input2"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/work_input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/work"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/rest_input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/preparation_input2" />

    <EditText
        android:id="@+id/rest_input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/rest"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/cycle_input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/work_input2" />

    <EditText
        android:id="@+id/cycle_input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="15dp"
        android:ems="10"
        android:hint="@string/cycles"
        android:inputType="number"
        app:layout_constraintBottom_toTopOf="@+id/calm_input2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rest_input2" />

    <EditText
        android:id="@+id/calm_input2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="200dp"
        android:ems="10"
        android:hint="@string/calm"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cycle_input2" />

    <Button
        android:id="@+id/update_button"
        android:layout_width="407dp"
        android:layout_height="68dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="158dp"
        android:text="@string/Update"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calm_input2" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="407dp"
        android:layout_height="68dp"
        android:layout_marginTop="20dp"
        android:text="@string/delete"
        android:textColor="#F60707"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/update_button" />

</androidx.constraintlayout.widget.ConstraintLayout>